compositor-x11: Damage output when we receive expose events for the window

The gl renderer typically repaints everything since we don't have
EGL_buffer_age under X, but the pixman renderer carefully only repaints
damaged regions.  So to actually repaint anything with the pixman
renderer, we need to damage the output.

https://bugs.freedesktop.org/show_bug.cgi?id=72351